refactored gradle structure. added spine3 model module