@@ -1,73 +1,55 @@
 buildscript {
+    configurations.all {
+        resolutionStrategy.cacheChangingModulesFor 0, "seconds"
+    }
     repositories {
         mavenLocal()
         jcenter()
         mavenCentral()
-        // Release repository
-        maven { url = spineRepository }
-        // Snapshots repository
-        maven { url = spineSnapshotsRepository }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url = spineRepository }
+        maven { url = spineSnapshotsRepository }
     }
-
     dependencies {
-        classpath 'com.google.cloud.tools:appengine-gradle-plugin:1.1.1'
-        classpath group: 'com.google.protobuf', name: 'protobuf-gradle-plugin', version: "${protobufGradlePluginVersion}"
-        classpath group: 'org.spine3.tools', name: 'protobuf-plugin', version: "${spinePluginVersion}"
+        classpath "dom4j:dom4j:1.6.1"
         classpath "com.gradle:build-scan-plugin:1.6"
+        classpath "org.spine3.tools:reflections-plugin:0.8.7-SNAPSHOT"
+        classpath "com.google.cloud.tools:appengine-gradle-plugin:1.1.1"
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.1"
+        classpath "org.spine3.tools:protobuf-plugin:0.8.7-SNAPSHOT"
     }
 }
 apply plugin: "com.gradle.build-scan"
-apply plugin: 'java'
-apply plugin: 'war'
-apply plugin: 'com.google.cloud.tools.appengine'
-apply plugin: 'com.google.protobuf'
-apply plugin: 'org.spine3.tools.protobuf-plugin'
-apply from: 'scripts/dependencies/dependencies.gradle'
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
 buildScan {
     licenseAgreementUrl = 'https://gradle.com/terms-of-service'
     licenseAgree = 'yes'
 }
-
-repositories {   // repositories for Jar's you access in your code
-    maven {
-        url 'https://maven-central.storage.googleapis.com'             // Google's mirror of Maven Central
-    }
-    maven { url = spineRepository }
-    maven { url = spineSnapshotsRepository }
-    jcenter()
-    mavenCentral()
+allprojects {
+    apply plugin: 'maven'
+    group 'app-engine'
+    version = moduleVersion
 }
-dependencies {
-    compile libraries.slf4j
-    compile libraries.spring
-    compile libraries.appengine
-    compile group: 'com.google.guava', name: 'guava', version: '20.0'
-    providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-appengine {  // App Engine tasks configuration
-    run {      // local (dev_appserver) configuration (standard environments only)
-        port = 8081                 // default
-//        jvmFlags = ['-XX:MaxPermSize=256M', '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=54361']
+subprojects {
+    ext.scriptsDir = "$rootProject.rootDir/scripts"
+    apply plugin: 'java'
+    apply plugin: 'reflections-plugin'
+    apply from: "$scriptsDir/dependencies/dependencies.gradle"
+    repositories {   // repositories for Jar's you access in your code
+        mavenLocal()
+        maven {
+            url 'https://maven-central.storage.googleapis.com'             // Google's mirror of Maven Central
+        }
+        maven { url = spineRepository }
+        maven { url = spineSnapshotsRepository }
+        jcenter()
+        mavenCentral()
     }
 
-    deploy {   // deploy configuration
-        project = 'elated-embassy-162812'
-        stopPreviousVersion = false  // default - stop the current version
-        promote = false              // default - & make this the current version
-        version = moduleVersion
-    }
+    sourceCompatibility = JavaVersion.VERSION_1_7
+    targetCompatibility = JavaVersion.VERSION_1_7
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.4.1'
+    gradleVersion = project.gradleVersion
 }
-
-group 'app-engine'
-version = moduleVersion
-
